force-app/main/default/objects/App_Config__mdt/App_Config__mdt.object-meta.xml
<CustomObject>
    <label>App Config</label>
    <pluralLabel>App Configs</pluralLabel>
</CustomObject>