force-app/main/default/objects/App_Config__mdt/fields/Config_Key__c.field-meta.xml
<CustomField>
    <fullName>Config_Key__c</fullName>
    <label>Config Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>