force-app/main/default/objects/App_Config__mdt/fields/Config_Value__c.field-meta.xml
<CustomField>
    <fullName>Config_Value__c</fullName>
    <label>Config Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>