force-app/main/default/objects/App_Config__mdt/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <length>50</length>
    <type>Text</type>
</CustomField>